# graphql_query

./: .formatter.exs  .gitignore  README.md  mix.exs  rust-toolchain.toml  test_sigil_warnings.exs
.github/workflows/: ci.yml  release.yml  rust-ci.yml
lib/: graphql_query.ex
lib/graphql_query/: format.ex  formatter.ex  native.ex  parser.ex  validator.ex
native/graphql_query_native/: Cargo.toml
native/graphql_query_native/.cargo/: config
native/graphql_query_native/src/: lib.rs
test/: graphql_query_test.exs
test/graphql_query/: format_test.exs  validator_test.exs
